server/k8s/courses-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courses-deployment
  namespace: courseservice
  labels:
    app: klowhub-courses-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: klowhub-courses-api
  template:
    metadata:
      labels:
        app: klowhub-courses-api
    spec:
      containers:
      - name: klowhub-courses-api
        image: ${GCLOUD_REGION}-docker.pkg.dev/${GCLOUD_PROJECT_ID}/klowhub-server/${COURSE_SERVICE_NAME}:${IMAGE_TAG}
        ports:
        - containerPort: 3002
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
