server/k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: gateway
  labels:
    app: klowhub-gateway-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: klowhub-gateway-api
  template:
    metadata:
      labels:
        app: klowhub-gateway-api
    spec:
      containers:
        - name: klowhub-gateway-api
          image: gcr.io/${GCP_PROJECT_ID}/klowhub-gateway-api:${IMAGE_TAG} 
          ports:
            - containerPort: 3000
