server/k8s/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: gateway
  labels:
    app: klowhub-gateway-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: klowhub-gateway-api
  template:
    metadata:
      labels:
        app: klowhub-gateway-api
    spec:
      containers:
      - name: klowhub-gateway-api
        image: ${GCLOUD_REGION}-docker.pkg.dev/${GCLOUD_PROJECT_ID}/klowhub-server/${GATEWAY_SERVICE_NAME}:${IMAGE_TAG}
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
