server/k8s/upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klowhub-upload-api-deployment
  namespace: gcc-upload
  labels:
    app: klowhub-upload-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: klowhub-upload-api
  template:
    metadata:
      labels:
        app: klowhub-upload-api
    spec:
      containers:
        - name: klowhub-upload-api
          image: gcr.io/${GCP_PROJECT_ID}/klowhub-upload-api:${IMAGE_TAG}
          ports:
            - containerPort: 3003  # Puerto en el que la app está escuchando dentro del contenedor
