server/k8s/upload-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klowhub-upload-api-deployment
  namespace: gcc-upload
  labels:
    app: klowhub-upload-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: klowhub-upload-api
  template:
    metadata:
      labels:
        app: klowhub-upload-api
    spec:
      containers:
        - name: klowhub-upload-api
          image: ${GCLOUD_REGION}-docker.pkg.dev/${GCLOUD_PROJECT_ID}/klowhub-server/${UPLOAD_SERVICE_NAME}:${IMAGE_TAG}
          ports:
            - containerPort: 3003
