server/k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: userservice
  labels:
    app: klowhub-users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: klowhub-users-api
  template:
    metadata:
      labels:
        app: klowhub-users-api
    spec:
      containers:
        - name: klowhub-users-api
          image: gcr.io/${GCP_PROJECT_ID}/klowhub-users-api:${IMAGE_TAG}
          ports:
            - containerPort: 3001
