server/k8s/users-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: userservice
  labels:
    app: klowhub-users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: klowhub-users-api
  template:
    metadata:
      labels:
        app: klowhub-users-api
    spec:
      containers:
      - name: klowhub-users-api
        image: ${GCLOUD_REGION}-docker.pkg.dev/${GCLOUD_PROJECT_ID}/klowhub-server/${USERS_SERVICE_NAME}:${IMAGE_TAG}
        ports:
        - containerPort: 3001
