server/k8s/courses-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-service
  namespace: courseservice
spec:
  selector:
    app: courses  # Se asocia con los pods que tienen esta etiqueta
  ports:
    - protocol: TCP
      port: 3002  # El puerto en el que el servicio de Identity será accesible
      targetPort: 3002  # El puerto en el que el contenedor está escuchando
  type: ClusterIP  # Tipo de servicio que solo es accesible dentro del clúster
