server/k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: userservice
spec:
  selector:
    app: klowhub-users-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
